dataset1235/2025-2/610742602/users/1276526791/executions/906907063_2149359571.log
== SUBMISSION (2025-08-19 21:05:55)
-- CODE: 
 Heraclito:55
total:90
print("valor pago por fredegunda foi 35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:04:45)
-- CODE: 
 Heraclito:55
total:90
 print("valor pago por fredegunda foi35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:06:45)
-- CODE: 
 Heraclito:55
total:90
print(valor pago por fredegunda foi 35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:05:16)
-- CODE: 
 Heraclito:55
total:90
print("valor pago por fredegunda foi35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:09:28)
-- CODE: 
 Heraclito: 55
total: 90
print("o valor pago por fredegunda foi: 35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito: 55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito: 55
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:06:19)
-- CODE: 
 Heraclito:55
total:90
print("valor pago por fredegunda foi 35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:10:15)
-- CODE: 
Heraclito: 55
Total: 90
print("o valor pago por fredegunda foi 35")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
o valor pago por fredegunda foi 35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
o valor pago por fredegunda foi 35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:05:31)
-- CODE: 
 Heraclito:55
total:90
print("valor pago por fredegunda foi 35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:09:00)
-- CODE: 
 Heraclito: 55
total: 90
print("o valor pago por fredegunda foi 35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito: 55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito: 55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:09:12)
-- CODE: 
 Heraclito: 55
total: 90
print("o valor pago por fredegunda foi: 35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito: 55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito: 55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:09:41)
-- CODE: 
 Heraclito: 55
Total: 90
print("o valor pago por fredegunda foi: 35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito: 55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito: 55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:05:57)
-- CODE: 
 Heraclito:55
total:90
print("valor pago por fredegunda foi 35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:04:13)
-- CODE: 
 Heraclito:55
total:90
 print("valor pago por fredegunda foi:35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:09:32)
-- CODE: 
 Heraclito: 55
total: 90
print("o valor pago por fredegunda foi: 35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito: 55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito: 55
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:03:54)
-- CODE: 
 Heraclito:55
total:90
print("valor pago por fredegunda foi:35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:03:01)
-- CODE: 
 Heraclito:55
total:90
print(valor pago por fredegunda foi :35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:09:56)
-- CODE: 
 Heraclito: 55
Total: 90
print("o valor pago por fredegunda foi 35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito: 55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito: 55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:09:42)
-- CODE: 
 Heraclito: 55
Total: 90
print("o valor pago por fredegunda foi: 35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito: 55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito: 55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:07:00)
-- CODE: 
 Heraclito:55
total:90
print(valor pago por fredegunda foi -35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:03:49)
-- CODE: 
 Heraclito:55
total:90
print("valor pago por fredegunda foi :35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:03:47)
-- CODE: 
 Heraclito:55
total:90
print("valor pago por fredegunda foi :35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:06:46)
-- CODE: 
 Heraclito:55
total:90
print(valor pago por fredegunda foi 35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:05:29)
-- CODE: 
 Heraclito:55
total:90
print("valor pago por fredegunda foi 35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:04:48)
-- CODE: 
 Heraclito:55
total:90
 print("valor pago por fredegunda foi35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heraclito:55
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
